Fix the variables example code
The `, keepdims=True` is wrong (we can simply delete it as the default value for this param is False), as ra_mean's shape is x.shape[1:].

--- a/docs/notebooks/flax_basics.ipynb
+++ b/docs/notebooks/flax_basics.ipynb
@@ -869,7 +869,7 @@
         "    mean = ra_mean.value # This will get either the value, or trigger init\n",
         "    bias = self.param('bias', lambda rng, shape: jnp.zeros(shape), x.shape[1:])\n",
         "    if is_initialized:\n",
-        "      ra_mean.value = self.decay * ra_mean.value + (1.0 - self.decay) * jnp.mean(x, axis=0, keepdims=True)\n",
+        "      ra_mean.value = self.decay * ra_mean.value + (1.0 - self.decay) * jnp.mean(x, axis=0)\n",
         "\n",
         "    return x - ra_mean.value + bias\n",
         "\n",
